overflow fix

--- a/src/css/base.css
+++ b/src/css/base.css
@@ -31,6 +31,7 @@
 
 html {
   scroll-behavior: smooth;
+  overflow-x: hidden;
 }
 
 h1,
